<resources>
    <string name="pulsar">Pulsame</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar">Cerrar</string>
    <string name="calcular">Calcular
    </string>
    <string name="app_name">Kaftapp
    </string>
    <string name="cardHola">Hola</string>
    <string name="cardImc">IMC</string>
    <string name="cardconversi_n">Conversión</string>
    <string name="cardmonedas">Monedas</string>
    <string name="cardcotizacion">Cotizacion</string>
    <string name="cardspinner">Spinner
    </string>
    <string name="titulo">Mi primer app</string>
    <string name="tunombre">Cual es tu Nombre</string>
    <string name="alumno">Kevin Alejandro Fuentes Talamantes</string>
    <string name="matricula">2021030662</string>
    <string name="materia">Desarrollo Móvil</string>
    <string name="imgalum">Mi foto
    </string>
    <string name="app_imc">Práctica IMC</string>
    <string name="peso">Ingresa tu peso (kg)</string>
    <string name="altura">Ingresa tu altura (m)</string>
    <string name="mensaje_resultado">Su resultado aparecerá aquí</string>
    <string name="app_conversion">Práctica de Conversión</string>
    <string name="hint_valor">Ingresa el valor</string>
    <string name="mensaje_resultado_conversion">El resultado aparecerá aquí</string>
    <string name="error_valor_invalido">Por favor ingrese un valor válido</string>
    <string name="mismo_unidad">La unidad de origen y destino no pueden ser iguales</string>
    <string name="resultado_conversion">Resultado: %.2f %s</string>
    <string name="mensaje_resultado_moneda">El resultado aparecerá aquí</string>
    <string-array name="spinnerUnidadDestino">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string name="app_monedas">Práctica de Conversión de monedas</string>
    <string name="confirmar_cierre">Desea salir?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancelado">Cancelado</string>
    <string-array name="monedas">
        <item>USD</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>SEK</item>
        <item>NZD</item>
        <item>MXN</item>
        <item>INR</item>
        <item>BRL</item>
        <item>ZAR</item>
        <item>RUB</item>
        <item>KRW</item>
        <item>SAR</item>
        <item>NGN</item>
        <item>IDR</item>
    </string-array>
    <string name="usd">1.0</string>
    <string name="eur">0.91</string>
    <string name="jpy">0.0070</string>
    <string name="gbp">1.34</string>
    <string name="aud">0.65</string>
    <string name="cad">1.34</string>
    <string name="chf">0.91</string>
    <string name="cny">7.21</string>
    <string name="sek">10.40</string>
    <string name="nzd">1.61</string>
    <string name="mxn">19.29</string>
    <string name="inr">82.50</string>
    <string name="brl">4.96</string>
    <string name="zar">18.00</string>
    <string name="rub">77.50</string>
    <string name="krw">1333.00</string>
    <string name="sar">3.75</string>
    <string name="ngn">780.00</string>
    <string name="idr">15300.00</string>
    <string name="error_falta_cantidad">Falta capturar la cantidad
    </string>

    <string name="Cliente_app">COTIZACION de TOYOTA</string>
    <string name="login_app">LOGIN COTIZACION</string>
    <string name="domicilio">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlán Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripción del Automóvil</string>
    <string name="precio">Valor del Automóvil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago inicial</string>
    <string name="tfin">Total a Financiar</string>
    <string name="ingresar">Ingresar</string>
    <string name="regresar">Regresar</string>
    <string name="calculos">Calculos Cotizacion</string>
    <string name="hint_nombre_cliente">Escribe el Nombre del cliente</string>
    <string name="_12_meses">12 Meses</string>
    <string name="_24_meses">24 Meses</string>
    <string name="_36_meses">36 Meses</string>
    <string name="_48_meses">48 Meses</string>

    <string name="spinner_name">Spiner Personalizado</string>
    <string name="itemFraces">Categorias de frases</string>
    <string name="itemAgradecimiento">Agradecimiento</string>
    <string name="itemAmor">Amor</string>
    <string name="itemNewYear">Año Nuevo</string>
    <string name="itemCanciones">Canciones</string>
    <string name="msgFrace">Desplegar</string>
    <string name="msgAgradecimiento">Prueba dar las Gracias</string>
    <string name="msgAmor">Enamora con estas fraces</string>
    <string name="msgNewYear">Feliz año nuevo</string>
    <string name="msgCanciones">Escucha solo lo mejor</string>
    <string name="msgSeleccion">Se ha seleccionado</string>
    <string name="msgDescripcion">Selecciona una cotegoria</string>
    <string name="categorias">Categorias</string>
    <string name="mensaje">Mensaje</string>

    <string name="listado_alumnos">Listado de Alumnos</string>

    <string name="alumno1_nombre">Kevin alejandrop Fuentes Talamantes</string>
    <string name="alumno1_matricula">20170234545</string>
    <string name="alumno1_carrera">Ing. Tec. Información</string>

    <string name="alumno2_nombre">Jorge Samudio Osuna</string>
    <string name="alumno2_matricula">2017030432</string>
    <string name="alumno2_carrera">Ing. Tec. Información</string>

    <string name="alumno3_nombre">Marco Sauceda Herrera</string>
    <string name="alumno3_matricula">2084763547</string>
    <string name="alumno3_carrera">Ing. Tec. Información</string>

    <string name="alumno4_nombre">Jesus Aguilar Brum </string>
    <string name="alumno4_matricula">2018048762</string>
    <string name="alumno4_carrera">Ing. Tec. Información</string>

    <string name="alumno5_nombre">Ulices Avila </string>
    <string name="alumno5_matricula">20129487634</string>
    <string name="alumno5_carrera">Ing. Tec. Información</string>
    <string name="cardlistview">List View</string>
</resources>