<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/rojo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/domicilio"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textAlignment="center"
            android:textSize="15sp"
            android:paddingBottom="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cotizacion"
            android:layout_gravity="center"
            android:paddingBottom="20sp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cliente"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="12sp"
            android:paddingBottom="20sp"
            android:textAlignment="center"
            android:id="@+id/txtCliente"
            android:hint="@string/hint_nombre_cliente"
            tools:ignore="TextFields" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            android:text="@string/ingresar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegresar"
            android:text="@string/regresar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
