<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="1dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/encabezado"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_imc"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="12dp"
                android:textStyle="bold"
                android:id="@+id/txtEncabezado" />
        </RelativeLayout>

        <EditText
            android:autofillHints="height"
            android:padding="20dp"
            android:id="@+id/txtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/colorSubTitulo"/>

        <EditText
            android:autofillHints="weight"
            android:padding="20dp"
            android:id="@+id/txtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/colorSubTitulo" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_resultado"
            android:textColor="@color/practica"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/lblResultado">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3"
            android:layout_marginBottom="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:backgroundTint="@color/boton1"
                android:textColor="@color/white"
                android:id="@+id/btnCalcular"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:backgroundTint="@color/boton2"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:backgroundTint="@color/rojo"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
